--- a/babylonProj/Element03/index.html
+++ b/babylonProj/Element03/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>Element3</title>
-</head>
-
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Element 3 – Key Control Scene</title>
+  </head>
+  <body>
     <canvas id="renderCanvas"></canvas>
-</body>
-
+  </body>
 </html>
 
 <script type="module" src="./src/index.ts"></script>
