--- a/babylonProj/Element02/index.html
+++ b/babylonProj/Element02/index.html
@@ -40,7 +40,7 @@
     </a>
   </div>
 
-  <!-- ELEMENTS + SOCIALS (top-right) -->
+  <!-- ELEMENTS + SOCIALS -->
   <div style="
     position: fixed;
     top: 16px;
